# wasmtime

./: Cargo.toml  README.md  backtrace.patch  build.rs
cranelift/codegen/src/: write.rs
cranelift/codegen/src/ir/: instructions.rs  layout.rs
cranelift/codegen/src/isa/: mod.rs
cranelift/codegen/src/machinst/: adapter.rs  mod.rs
cranelift/codegen/src/regalloc/: branch_splitting.rs
cranelift/codegen/src/verifier/: mod.rs
cranelift/filetests/src/: test_unwind.rs
cranelift/interpreter/src/: step.rs
cranelift/reader/src/: parser.rs
cranelift/wasm/src/: code_translator.rs  translation_utils.rs
cranelift/wasm/src/environ/: dummy.rs
cranelift/wasm/src/state/: func_state.rs
crates/aot-runtime/: Cargo.toml
crates/aot-runtime/src/: lib.rs
crates/api/: Cargo.toml
crates/api/examples/: hello.rs
crates/api/src/: frame_info.rs  runtime.rs  trap.rs  types.rs  wasm.rs
crates/c-api/: Cargo.toml
crates/debug/src/: lib.rs  write_debuginfo.rs
crates/environ/: Cargo.toml
crates/environ/src/: compilation.rs  cranelift.rs  func_environ.rs  interpreter.rs  lib.rs
crates/jit/: Cargo.toml
crates/jit/src/: code_memory.rs  compiler.rs  instantiate.rs  lib.rs  link.rs  object.rs
crates/jit/src/unwind/: systemv.rs
crates/lightbeam/src/: microwasm.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: instance.rs  lib.rs  libcalls.rs  traphandlers.rs  vmcontext.rs
crates/runtime/src/interpreter/: code_memory.rs  eval.rs  mod.rs  trampoline.rs  trampoline_sea.rs
crates/wasi/: Cargo.toml
crates/wasi/c-example/: .gitignore  Makefile  cube.c  run-cube.c
crates/wasi/src/: c_api.rs  instantiate.rs  lib.rs
crates/wasmtime/: Cargo.toml
crates/wasmtime/src/: frame_info.rs  func.rs  lib.rs  module.rs  runtime.rs
crates/wast/: Cargo.toml
crates/wiggle/wasmtime/: Cargo.toml
examples/: hello.rs  hello.wat  linking_foo.rs
examples/foo-wasm/: .gitignore  build_foo.sh  foo.c
src/: lib.rs  obj.rs  wasm2obj.rs
src/commands/: run.rs  wasm2obj.rs  wast.rs
wasmtime-api/: Cargo.toml
wasmtime-api/examples/: gcd.rs  hello.rs  memory.rs  multi.rs
wasmtime-api/src/: callable.rs  externals.rs  instance.rs  lib.rs  module.rs  ref.rs  runtime.rs  table_utils.rs  types.rs  values.rs  wasm.rs
wasmtime-api/src/trampoline/: func.rs  mod.rs
wasmtime-api/tests/: examples.rs
wasmtime-debug/: Cargo.toml
wasmtime-debug/src/: lib.rs  write_debuginfo.rs
wasmtime-debug/src/transform/: address_transform.rs  attr.rs  data.rs  line_program.rs  mod.rs  unit.rs
wasmtime-environ/: Cargo.toml
wasmtime-environ/src/: compilation.rs  cranelift.rs  func_environ.rs  lib.rs  module_environ.rs
wasmtime-jit/: Cargo.toml
wasmtime-jit/src/: compiler.rs  instantiate.rs
wasmtime-obj/: Cargo.toml
wasmtime-runtime/src/: instance.rs  vmcontext.rs
wasmtime-wasi/: Cargo.toml
wasmtime-wasi-c/: Cargo.toml
wasmtime-wast/: Cargo.toml
(+17 files in other folders)
