[package]
name = "wasmtime"
authors = ["The Wasmtime Project Developers"]
version = "0.1.0"
description = "Command-line interface for Wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://cranelift.readthedocs.io/"
categories = ["wasm"]
repository = "https://github.com/CraneStation/wasmtime"
edition = "2018"

[[bin]]
name = "wasmtime"
path = "src/wasmtime.rs"

[[bin]]
name = "wast"
path = "src/wast.rs"

[[bin]]
name = "wasm2obj"
path = "src/wasm2obj.rs"

[dependencies]
cranelift-codegen = "0.30.0"
cranelift-native = "0.30.0"
cranelift-entity = "0.30.0"
cranelift-wasm = "0.30.0"
wasmtime-debug = { path = "wasmtime-debug" }
wasmtime-environ = { path = "wasmtime-environ" }
wasmtime-runtime = { path = "wasmtime-runtime" }
wasmtime-jit = { path = "wasmtime-jit" }
wasmtime-obj = { path = "wasmtime-obj" }
wasmtime-wast = { path = "wasmtime-wast" }
wasmtime-wasi = { path = "wasmtime-wasi" }
wasmtime-wasi-c = { path = "wasmtime-wasi-c", optional = true }
wasi-common = { git = "https://github.com/CraneStation/wasi-common" }
docopt = "1.0.1"
serde = "1.0.75"
serde_derive = "1.0.75"
faerie = "0.10.0"
target-lexicon = { version = "0.4.0", default-features = false }
pretty_env_logger = "0.3.0"
file-per-thread-logger = "0.1.1"
wabt = "0.7"
libc = "0.2.50"
errno = "0.2.4"

[workspace]

[features]
lightbeam = ["wasmtime-environ/lightbeam", "wasmtime-jit/lightbeam"]
wasi-c = ["wasmtime-wasi-c"]

[patch.crates-io]
gimli = { git = "https://github.com/gimli-rs/gimli", rev="423431f6747167af8e64cc8c8378f9a34a18ff8f" }
cranelift-codegen = { git = "https://github.com/CraneStation/cranelift", rev = "cb7fccea1204d3880213bc5a0384f588eecf9806" }
cranelift-wasm = { git = "https://github.com/CraneStation/cranelift", rev = "cb7fccea1204d3880213bc5a0384f588eecf9806" }
cranelift-native = { git = "https://github.com/CraneStation/cranelift", rev = "cb7fccea1204d3880213bc5a0384f588eecf9806" }
cranelift-entity = { git = "https://github.com/CraneStation/cranelift", rev = "cb7fccea1204d3880213bc5a0384f588eecf9806" }
cranelift-frontend = { git = "https://github.com/CraneStation/cranelift", rev = "cb7fccea1204d3880213bc5a0384f588eecf9806" }
