[package]
name = "wasmtime-aot-runtime"
version = "0.1.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime-environ = { path = "../environ", version = "0.25.0" }
wasmtime-jit = { path = "../jit", version = "0.25.0" }
wasmtime-runtime = { path = "../runtime" }
wasmtime-wasi = { path = "../wasi", version = "0.25.0" }
wasi-cap-std-sync = { path = "../wasi-common/cap-std-sync", version = "0.25.0" }
anyhow = "1.0.19"
bincode = "1.2.1"
psm = "0.1.11"
